--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 }
 
 .ki > div {
-  background-color: #f1f1f1;
   width: 100px;
   margin: 120px;
   text-align: center;
@@ -57,6 +56,9 @@ k{
 form{
     text-align: center;
 }
+.s{
+    background-color: darkblue;
+    }
     </style>
 </head>
 <body>
@@ -109,19 +111,28 @@ form{
           </div>
           <h2>Click Here for more Products</h2>
           </div>
+         <br><br><br>
+          <h1>Contact us</h1>
           <form>
-            <label>First Name:</label>
+            <br><br>
+            <label>First Name :</label>
             <input><br><br>
-            <label>Last Name:</label>
+            <label>Last Name  :</label>
             <input><br><br>
-            <label>city:</label>
+            <label>city        :</label>
             <input><br><br>
-            <label>Address:</label>
-            <input><br><br>
-            <label>Requirement:</label>
-            <input><br><br>
+            <label >Address    :</label>
+            <input style="width:200px; height:50px;"><br><br>
+            <label>Requirement :</label>
+            <input style="width:200px; height:50px;"><br><br>
             <button style="background-color: rgb(140, 121, 167);">submit</button>
             <button style="background-color: rgb(140, 121, 167);">cancel</button>
         </form>
+        <br><br><br>
+        <div class="s">
+          <br><br><br>
+          <h1>Webpage is developed by your name</h1>
+        <br><br><br>
+        </div>
 </body>
 </html>
