--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ form{
     </ul>
     </div>
     </div>
-    <img style="text-align: center;"src="https://img.freepik.com/free-photo/modern-sports-car-speeds-through-dark-curve-generative-ai_188544-9136.jpg?size=626&ext=jpg&ga=GA1.1.1413502914.1719964800&semt=sph">
-    <h1>About Us</h1>
+   <img src="https://img.freepik.com/free-photo/modern-sports-car-speeds-through-dark-curve-generative-ai_188544-9136.jpg?size=626&ext=jpg&ga=GA1.1.1413502914.1719964800&semt=sph"
+    width="100%">
     <br>
     <p>Lorem ipsum dolor sit amet consectetur, <br>
         adipisicing elit. Cum a suscipit consectetur,<br>
