--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ form{
     </div>
    <img src="https://img.freepik.com/free-photo/modern-sports-car-speeds-through-dark-curve-generative-ai_188544-9136.jpg?size=626&ext=jpg&ga=GA1.1.1413502914.1719964800&semt=sph"
     width="100%">
+    <h1>About Us</h1>
     <br>
     <p>Lorem ipsum dolor sit amet consectetur, <br>
         adipisicing elit. Cum a suscipit consectetur,<br>
