--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ form{
         <br><br><br>
         <div class="s">
           <br><br><br>
-          <h1>Webpage is developed by your name</h1>
+          <h1>Webpage is developed by Sowndharya</h1>
         <br><br><br>
         </div>
 </body>
